[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/app.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://sounds/static_brown.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/static_filtered.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/static_brown_filt.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/volume.gd" type="Script" id=6]
[ext_resource path="res://about.png" type="Texture" id=7]
[ext_resource path="res://font/WixMadeforText-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sounds/river.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/heavy_rain.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/ocean.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/boxfan.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/aircon.ogg" type="AudioStream" id=13]
[ext_resource path="res://birthday-popup.png" type="Texture" id=14]
[ext_resource path="res://sounds/digispace.ogg" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=2]
size = 10
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
extra_spacing_bottom = -6
font_data = ExtResource( 8 )

[node name="app" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="NoiseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -64.5
margin_right = 56.5
margin_bottom = -47.5
theme = ExtResource( 2 )
text = "Noise Type:"
align = 1

[node name="VolumeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -8.0
margin_right = 24.5
margin_bottom = 9.0
theme = ExtResource( 2 )
text = "Volume:"
align = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -87.2
margin_top = -39.0
margin_right = -8.8
margin_bottom = -16.0
theme = ExtResource( 2 )
text = "PLAY"

[node name="Stop" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.8
margin_top = -39.0
margin_right = 87.2
margin_bottom = -16.0
theme = ExtResource( 2 )
text = "STOP"

[node name="OptionButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -44.0
margin_right = 102.0
margin_bottom = -21.0
theme = ExtResource( 2 )
text = "Brown Noise"
align = 1
icon_align = 1
items = [ "Brown Noise", null, false, 0, null, "Filtered Brown Noise", null, false, 1, null, "Filtered White Noise", null, false, 2, null, "Ocean", null, false, 3, null, "River", null, false, 4, null, "Heavy Rain", null, false, 5, null, "Air Conditioner", null, false, 6, null, "Box Fan", null, false, 7, null, "DigiSpace", null, false, 8, null ]
selected = 0

[node name="HSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 11.0
margin_right = 114.0
margin_bottom = 27.0
max_value = 1.0
step = 0.03
script = ExtResource( 6 )

[node name="AboutButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -29.0
margin_right = -3.0
margin_bottom = -3.0
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="StaticBrown" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Noises"

[node name="StaticBrownFilt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Noises"

[node name="StaticFilt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Noises"

[node name="Ocean" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Noises"

[node name="River" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.0
bus = "Noises"

[node name="Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -2.0
bus = "Noises"

[node name="AirCon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Noises"

[node name="BoxFan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Noises"

[node name="DigiSpace" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "Noises"

[node name="about_box" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AboutBG" type="ColorRect" parent="about_box"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.815686 )

[node name="celebrate" type="Control" parent="about_box"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="stixcparty" type="Sprite" parent="about_box/celebrate"]
visible = false
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( 206.892, 108.75 )
rotation = -0.261799
scale = Vector2( 0.160981, 0.160981 )
texture = ExtResource( 14 )

[node name="datetext" type="Label" parent="about_box/celebrate"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -26.0
margin_right = 236.0
margin_bottom = 35.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Happy Birthday StaticNoizer!
The first commit was s year(s) ago!"

[node name="line" type="ColorRect" parent="about_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 39.0
margin_right = 112.0
margin_bottom = 40.0

[node name="line2" type="ColorRect" parent="about_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -29.0
margin_right = 112.0
margin_bottom = -28.0

[node name="AppInfo" type="Label" parent="about_box"]
margin_left = 8.0
margin_top = 8.0
margin_right = 244.0
margin_bottom = 49.0
theme = ExtResource( 2 )
text = "StaticNoizer - v1.8a
Created by stixc (contact@stixc.lol)"

[node name="AppDesc" type="Label" parent="about_box"]
margin_left = 8.0
margin_top = 55.0
margin_right = 241.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "A simple noise player app to calm
yourself down, for work, etc.

All is made by stixc
Sounds sourced from Freesound"

[node name="AppYear" type="Label" parent="about_box"]
margin_left = 8.0
margin_top = 136.0
margin_right = 41.0
margin_bottom = 153.0
theme = ExtResource( 2 )
text = "2023"

[node name="CloseAboutButton" type="Button" parent="about_box"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -31.0
margin_right = 22.0
margin_bottom = -8.0
theme = ExtResource( 2 )
text = "Close"

[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Stop" to="." method="_on_Stop_button_up"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="about_box/CloseAboutButton" to="." method="_on_CloseAboutButton_pressed"]
